Version 5.0.2 Note: Requires Java 21. If you want to use older versions of Java, please use 4.x versions.
Replace daemon threads with virtual threads for improved performance

Dropped the class DaemonThread. You can use virtual thread instead of such a class.

Replaced all custom daemon thread implementations with virtual threads to leverage modern concurrency features. The transition improves system resource management and aligns with Java 21's capabilities. Also included minor bug fixes and optimizations for thread-safe behaviors.